--- a/中文手册.md
+++ b/中文手册.md
@@ -8,7 +8,7 @@
 
 ---
 
-Armory SDK 能被运行在 **Windows**, **Linux** 和 **macOS**。项目可以部署到桌面、网络、移动和控制台上。
+Armory SDK 能被运行在 **Windows**, **Linux** 和 **macOS**。项目可以部署到桌面、网页、移动端和控制台上。
 
 ### 入门
 
